--- a/uspd.sty
+++ b/uspd.sty
@@ -96,8 +96,8 @@
 
 \begin{center}
 % field 1, organization
-\textit{АКЦИОНЕРНОЕ ОБЩЕСТВО}\\
-"НАУЧНО-ИССЛЕДОВАТЕЛЬСКИЙ ИНСТИТУТ\\"ЗАКЛАДНЫХ ЛОКАЛЬНЫХ АРГУМЕНТОВ"\\(АО "НИИ "ЗЛА")
+Инжиниринговый центр Группы <<ГАЗ>> \\
+имени А.А. Липгарта
 
 % field 2, names and signatures
 \begin{tabular}{p{70mm}cp{70mm}}
